--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: cherrypy
 Maintainer: CherryPy Team <team@cherrypy.org>
 Section: python
 Priority: optional
-Build-Depends: python3-setuptools, python3-all, debhelper (>= 7.4.3)
+Build-Depends: python3-setuptools, python3-all, debhelper (>= 7.4.3), python3-setuptools-scm
 Standards-Version: 3.9.1
 
 
