debian/control: source and package name changes
Source and package name has been changed to python3-cherrypy8.
This is needed to avoid possible conflict with the original
pthon3-cherrypy package.

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: cherrypy
+Source: python3-cherrypy8
 Maintainer: CherryPy Team <team@cherrypy.org>
 Section: python
 Priority: optional
 Build-Depends: python3-setuptools, python3-all, debhelper (>= 7.4.3), python3-setuptools-scm
 Standards-Version: 3.9.1
 
-Package: python3-cherrypy
+Package: python3-cherrypy8
 Architecture: all
 Depends: ${misc:Depends}, ${python3:Depends}
 Description: Object-Oriented HTTP framework
