debian: make the package conflict with and replace python3-cherrypy3
Hopefully this will prevent the build system from trying to install both
packages on the same environment and forcing the removal of the old one.

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Standards-Version: 3.9.1
 Package: python3-cherrypy8
 Architecture: all
 Depends: ${misc:Depends}, ${python3:Depends}
+Conflicts: python3-cherrypy3
+Replaces: python3-cherrypy3
 Description: Object-Oriented HTTP framework
  CherryPy is a pythonic, object-oriented HTTP framework
 
